# Python-Agent-Manager-Web-UI

./: .gitignore  README.md  app.py  config.py  database.py  history.db  models.py  pyproject.toml  requirements.txt  runner.py  scheduler.py  script_meta.json  utils.py
.github/workflows/: verify.yml
static/: index.html
tasks/: backup.py  report.py  scraper.py
